--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
 
         </div><!-- /.header__inner -->
 
-        <button type="button" class="global-nav__sp-btn">
+        <button type="button" class="global-nav__sp-btn" id="js_btn">
             <span></span>
             <span></span>
             <span></span>
         </button><!-- /.header__sp-btn -->
 
-        <div class="open-contents_sp">
+        <div class="open-contents_sp" id="js_open-contents">
             <nav class="global-nav_sp">
                 <ul class="global-nav__list_sp">
-                    <li class="global-nav__item_sp"><a href="#about" class="global-nav__link global-nav__link_sp">About</a></li><!-- /.global-nav__item_sp -->
-                    <li class="global-nav__item_sp"><a href="#products" class="global-nav__link global-nav__link_sp">Products</a></li><!-- /.global-nav__item_sp -->
-                    <li class="global-nav__item_sp"><a href="#news" class="global-nav__link global-nav__link_sp">News</a></li><!-- /.global-nav__item_sp -->
-                    <li class="global-nav__item_sp"><a href="#events" class="global-nav__link global-nav__link_sp">Events</a></li><!-- /.global-nav__item_sp -->
-                    <li class="global-nav__item_sp"><a href="contact/index.html" class="global-nav__link global-nav__link_sp">Contact</a></li><!-- /.global-nav__item_sp -->
-                    <li class="global-nav__item_sp"><a href="#access" class="global-nav__link global-nav__link_sp"><i class="fas fa-map-marker-alt"></i></a></li><!-- /.global-nav__item_sp -->
+                    <li class="global-nav__item_sp"><a href="#about" class="global-nav__link global-nav__link_sp js_navBtn">About</a></li><!-- /.global-nav__item_sp -->
+                    <li class="global-nav__item_sp"><a href="#products" class="global-nav__link global-nav__link_sp js_navBtn">Products</a></li><!-- /.global-nav__item_sp -->
+                    <li class="global-nav__item_sp"><a href="#news" class="global-nav__link global-nav__link_sp js_navBtn">News</a></li><!-- /.global-nav__item_sp -->
+                    <li class="global-nav__item_sp"><a href="#events" class="global-nav__link global-nav__link_sp js_navBtn">Events</a></li><!-- /.global-nav__item_sp -->
+                    <li class="global-nav__item_sp"><a href="contact/index.html" class="global-nav__link global-nav__link_sp js_navBtn">Contact</a></li><!-- /.global-nav__item_sp -->
+                    <li class="global-nav__item_sp"><a href="#access" class="global-nav__link global-nav__link_sp js_navBtn"><i class="fas fa-map-marker-alt"></i></a></li><!-- /.global-nav__item_sp -->
                 </ul><!-- /.under-header__nav-list -->
             </nav><!-- /.under-header__nav -->
         </div><!-- /.under-header__open-contents -->
