--- a/contact/index.html
+++ b/contact/index.html
@@ -25,22 +25,22 @@
     <header class="under-header">
 
         <div class="under-header__inner flex-wrapper_c">
-            <p class="under-header__logo">さらや</p><!-- /.under-header__logo -->
+            <a class="under-header__logo" href="/index.html">さらや</a><!-- /.under-header__logo -->
 
-            <button type="button" class="under-header__nav-btn">
+            <button type="button" class="under-header__nav-btn" id="js_btn">
                 <span></span>
                 <span></span>
                 <span></span>
             </button><!-- /.under-header__nav-btn -->
         </div><!-- /.under-header__inner -->
 
-        <div class="under-header__open-contents">
+        <div class="under-header__open-contents" id="js_open-contents">
             <nav class="under-header__nav">
                 <ul class="under-header__nav-list flex-wrapper_sb">
-                    <li class="under-header__nav-item"><a href="/index.html" class="under-header__nav-link">Top</a></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/about/index.html" class="under-header__nav-link">About</a></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/products/index.html" class="under-header__nav-link">Products</a></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/contact/index.html" class="under-header__nav-link">Contact</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="/index.html" class="under-header__nav-link js_navBtn">Top</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="/about/index.html" class="under-header__nav-link js_navBtn">About</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="/products/index.html" class="under-header__nav-link js_navBtn">Products</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="/contact/index.html" class="under-header__nav-link js_navBtn">Contact</a></li><!-- /.under-header__nav-item -->
                 </ul><!-- /.under-header__nav-list -->
             </nav><!-- /.under-header__nav -->
 
