[Add]js-scrollTop

--- a/products/index.html
+++ b/products/index.html
@@ -320,7 +320,7 @@
 
         </div><!-- /.footer-contents -->
 
-        <div class="to-top"></div><!-- /.to-top -->
+        <div class="to-top" id="js_to-top"></div><!-- /.to-top -->
 
     </footer><!-- /.footer -->
 
