--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 </head>
 <body>
 
+    <!-- loading -->
+    <div id="js_loading" class="loading">
+        <div class="loading__spinner"></div><!-- /.loading__spinner -->
+    </div><!-- /.loading -->
+
     <!-- main view -->
     <div class="mv layer_white">
         <div class="mv__inner">
