--- a/contact/index.html
+++ b/contact/index.html
@@ -22,6 +22,11 @@
 </head>
 <body>
 
+    <!-- loading -->
+    <div id="js_loading" class="loading">
+        <div class="loading__spinner"></div><!-- /.loading__spinner -->
+    </div><!-- /.loading -->
+
     <header class="under-header">
 
         <div class="under-header__inner flex-wrapper_c">
