[Add]アニメーション

--- a/contact/index.html
+++ b/contact/index.html
@@ -66,7 +66,7 @@
 
     </header><!-- /.under-header -->
 
-    <div class="top-view top-view_contact layer_white">
+    <div class="top-view top-view_contact layer_white anime anime_in">
         <h1 class="top-view__title">Contact</h1><!-- /.top-view__title -->
     </div><!-- /.top-view -->
 
@@ -74,11 +74,11 @@
 
         <section class="contact-contents">
 
-            <a class="tel-link lh_25" href="tel:090-123-4567">お電話でのお問い合わせはこちら</a><!-- /.tel-link -->
+            <a class="tel-link lh_25 anime anime_up" href="tel:090-123-4567">お電話でのお問い合わせはこちら</a><!-- /.tel-link -->
 
             <div class="contact-message__wrapper">
                 <details class="contact-message contact-message__buy">
-                    <summary class="contact-message__title">作品のご購入をご検討中の方へ</summary><!-- /.contact-message__title -->
+                    <summary class="contact-message__title anime_list">作品のご購入をご検討中の方へ</summary><!-- /.contact-message__title -->
 
                     <div class="contact-message__contents">
                         <p class="contact-message__text">以下をコピーしてご記入ください。</p><!-- /.contact-message__text -->
@@ -95,7 +95,7 @@
                 </details><!-- /.contact-message -->
 
                 <details class="contact-message contact-message__listing">
-                    <summary class="contact-message__title">出品をご希望の方へ</summary><!-- /.contact-message__title -->
+                    <summary class="contact-message__title anime_list">出品をご希望の方へ</summary><!-- /.contact-message__title -->
 
                     <div class="contact-message__contents">
                         <p class="contact-message__text">以下をコピーしてご記入ください。</p><!-- /.contact-message__text -->
@@ -111,7 +111,7 @@
 
         </section><!-- /.contact-contents -->
 
-        <form method="post" class="contact-form">
+        <form method="post" class="contact-form anime anime_up">
             <dl>
 
                 <!-- お問い合わせ種別 -->
@@ -202,7 +202,7 @@
         <section id="access" class="access">
             <h2 class="section-title">Access</h2><!-- /.section-title -->
 
-            <div class="access-contents contents_mt flex-wrapper_sb flex-wrapper_md-block">
+            <div class="access-contents contents_mt flex-wrapper_sb flex-wrapper_md-block anime anime_up">
 
                 <div class="access__map-wrapper">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.8224439425167!2d139.6666989155021!3d35.60744618021153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f51f0fbffc7b%3A0x92ea42cf08497ba6!2z44CSMTUyLTAwMzUg5p2x5Lqs6YO955uu6buS5Yy66Ieq55Sx44GM5LiY77yR5LiB55uu77yZ4oiS77yY!5e0!3m2!1sja!2sjp!4v1628966321092!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -233,7 +233,7 @@
         <section class="sns">
             <h2 class="section-title section-title_cap">Follow us</h2><!-- /.section-title -->
 
-            <div class="sns-contents contents_mt">
+            <div class="sns-contents contents_mt anime anime_up">
 
                 <ul class="sns-list flex-wrapper_c">
                     <li class="sns-list__item"><a href="#" class="sns-list__link"><i class="fab fa-instagram"></i></a></li><!-- /.sns-list__item -->
