--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <section id="about" class="about">
             <h2 class="section-title section-title_left">About</h2><!-- /.section-title -->
 
-            <div class="about-contents contents_mt">
+            <div class="about-contents contents_mt anime anime_up">
                 <a href="/about/index.html" class="about__link layer_white layer_round">
                     <p class="about__lead-text">毎日の食卓に<br class="br_sp">そっと寄り添う、<br class="br_sp">あなただけの<br class="br_sp">うつわ。</p><!-- /.about__lead-text -->
                 </a><!-- /.about__link -->
@@ -97,7 +97,7 @@
             <div class="products-contents contents_mt">
 
                 <ul class="products-list flex-wrapper_sb flex-wrapper_sm-block">
-                    <li class="products-list__item">
+                    <li class="products-list__item anime_list">
                         <figure class="products-banner products-banner_yt layer_white layer_br20">
                             <img src="/common/img/yamadatakashi.jpg" alt="yamada takashi制作の白いお皿" width="534" height="196" loading="lazy" decoding="async">
                         </figure><!-- /.products-banner -->
@@ -108,7 +108,7 @@
                         </div><!-- /.products-list__text-wrapper -->
                     </li><!-- /.products-list__item -->
 
-                    <li class="products-list__item">
+                    <li class="products-list__item anime_list">
                         <figure class="products-banner products-banner_n layer_white layer_br20">
                             <img src="/common/img/ndish.jpg" alt="n.dish制作の赤いお皿" width="534" height="196" loading="lazy" decoding="async">
                         </figure><!-- /.products-banner -->
@@ -119,7 +119,7 @@
                         </div><!-- /.products-list__text-wrapper -->
                     </li><!-- /.products-list__item -->
 
-                    <li class="products-list__item">
+                    <li class="products-list__item anime_list">
                         <figure class="products-banner products-banner_s layer_white layer_br20">
                             <img src="/common/img/saginuma.jpg" alt="鷺沼工房制作の湯呑" width="534" height="196" loading="lazy" decoding="async">
                         </figure><!-- /.products-banner -->
@@ -130,7 +130,7 @@
                         </div><!-- /.products-list__text-wrapper -->
                     </li><!-- /.products-list__item -->
 
-                    <li class="products-list__item">
+                    <li class="products-list__item anime_list">
                         <figure class="products-banner products-banner_na layer_white layer_br20">
                             <img src="/common/img/nana.jpg" alt="nana制作のカトラリー" width="534" height="196" loading="lazy" decoding="async">
                         </figure><!-- /.products-banner -->
@@ -153,7 +153,7 @@
         <!-- news -->
         <section id="news" class="news">
 
-            <div class="news-contents">
+            <div class="news-contents anime anime_up">
 
                 <div class="flex-wrapper_sb">
                     <h2 class="section-title section-title_left">News</h2><!-- /.section-title -->
@@ -191,10 +191,10 @@
         <section id="events" class="events">
             <h2 class="section-title">Events</h2><!-- /.section-title -->
 
-            <div class="events-contents contents_mt">
+            <div class="events-contents contents_mt anime anime_up">
 
                 <div class="events-banner layer_white layer_br20">
-                    <img src="/top/img/top_events.jpg" alt="金継ぎ体験のバナー画像" width="1108" height="200" loading="lazy" decoding="async">
+                    <img src="/top/img/top_events.jpg" alt="金継ぎ体験のバナー画像">
                     <h3 class="events-title">金継ぎ体験</h3><!-- /.events-title -->
                 </div><!-- /.events-banner -->
 
@@ -253,7 +253,7 @@
         <section id="access" class="access">
             <h2 class="section-title">Access</h2><!-- /.section-title -->
 
-            <div class="access-contents contents_mt flex-wrapper_sb flex-wrapper_md-block">
+            <div class="access-contents contents_mt flex-wrapper_sb flex-wrapper_md-block anime anime_up">
 
                 <div class="access__map-wrapper">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.8224439425167!2d139.6666989155021!3d35.60744618021153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f51f0fbffc7b%3A0x92ea42cf08497ba6!2z44CSMTUyLTAwMzUg5p2x5Lqs6YO955uu6buS5Yy66Ieq55Sx44GM5LiY77yR5LiB55uu77yZ4oiS77yY!5e0!3m2!1sja!2sjp!4v1628966321092!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -284,7 +284,7 @@
         <section class="sns">
             <h2 class="section-title section-title_cap">Follow us</h2><!-- /.section-title -->
 
-            <div class="sns-contents contents_mt">
+            <div class="sns-contents contents_mt anime anime_up">
 
                 <ul class="sns-list flex-wrapper_c">
                     <li class="sns-list__item"><a href="#" class="sns-list__link"><i class="fab fa-instagram"></i></a></li><!-- /.sns-list__item -->
