--- a/products/index.html
+++ b/products/index.html
@@ -66,7 +66,7 @@
 
     </header><!-- /.under-header -->
 
-    <div class="top-view top-view_products layer_white">
+    <div class="top-view top-view_products layer_white anime anime_in">
         <h1 class="top-view__title top-view__title_products">Products</h1><!-- /.top-view__title -->
     </div><!-- /.top-view -->
 
@@ -74,7 +74,7 @@
 
         <section class="products">
 
-            <p class="products__lead-text lh_25">
+            <p class="products__lead-text lh_25 anime anime_up">
                 こちらに掲載している作品は、お問い合わせフォームよりご購入いただけます。<br>
                 ※売り切れの場合もございます。<br>
                 ※詳しい在庫状況等はお電話、またはお問い合わせフォームよりお問い合わせください。
@@ -86,12 +86,12 @@
         <section class="artist-products">
 
 .
-            <div class="artist-products__banner artist-products__banner_yt layer_white">
+            <div class="artist-products__banner artist-products__banner_yt layer_white anime anime_up">
                 <h2 class="artist-products__title">yamada takashi</h2><!-- /.artist-artist-products__title -->
             </div><!-- /.artist-products__banner -->
 
             <ul class="artist-products-list">
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/y_item01.png" alt="しろいうつわ" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-artist-products-list__img -->
@@ -102,7 +102,7 @@
                     </div><!-- /.artist-artist-products-list__info -->
                 </li><!-- /.artist-artist-products-list__item -->
 
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/y_item02.png" alt="しろいおさら" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -113,7 +113,7 @@
                     </div><!-- /.artist-products-list__info -->
                 </li><!-- /.artist-products-list__item -->
 
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/y_item03.png" alt="きなりのおさら" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -124,7 +124,7 @@
                     </div><!-- /.artist-products-list__info -->
                 </li><!-- /.artist-products-list__item -->
 
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/y_item04.png" alt="ざらっとおさら" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -135,7 +135,7 @@
                     </div><!-- /.artist-products-list__info -->
                 </li><!-- /.artist-products-list__item -->
 
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/y_item01.png" alt="しろいうつわ" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -146,7 +146,7 @@
                     </div><!-- /.artist-products-list__info -->
                 </li><!-- /.artist-products-list__item -->
 
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/y_item01.png" alt="しろいうつわ" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -163,12 +163,12 @@
         <!-- n.dish -->
         <section class="artist-products">
 
-            <div class="artist-products__banner artist-products__banner_n layer_white">
+            <div class="artist-products__banner artist-products__banner_n layer_white anime anime_up">
                 <h2 class="artist-products__title">n.dish</h2><!-- /.artist-products__title -->
             </div><!-- /.artist-products__banner -->
 
             <ul class="artist-products-list">
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/n_item01.png" alt="blue dish" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -179,7 +179,7 @@
                     </div><!-- /.artist-products-list__info -->
                 </li><!-- /.artist-products-list__item -->
 
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/n_item02.png" alt="almond dish" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -190,7 +190,7 @@
                     </div><!-- /.artist-products-list__info -->
                 </li><!-- /.artist-products-list__item -->
 
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/n_item03.png" alt="pink dish" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -201,7 +201,7 @@
                     </div><!-- /.artist-products-list__info -->
                 </li><!-- /.artist-products-list__item -->
 
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/n_item04.png" alt="black dish" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -218,12 +218,12 @@
         <!-- saginuma koubou -->
         <section class="artist-products">
 
-            <div class="artist-products__banner artist-products__banner_s layer_white">
+            <div class="artist-products__banner artist-products__banner_s layer_white anime anime_up">
                 <h2 class="artist-products__title artist-products__title_wh">鷺沼工房</h2><!-- /.artist-products__title -->
             </div><!-- /.artist-products__banner -->
 
             <ul class="artist-products-list">
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/s_item01.png" alt="湯呑セット" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -234,7 +234,7 @@
                     </div><!-- /.artist-products-list__info -->
                 </li><!-- /.artist-products-list__item -->
 
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/s_item02.png" alt="菊" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -250,12 +250,12 @@
 
         <!-- nana -->
         <section class="artist-products">
-            <div class="artist-products__banner artist-products__banner_na layer_white">
+            <div class="artist-products__banner artist-products__banner_na layer_white anime anime_up">
                 <h2 class="artist-products__title">nana</h2><!-- /.artist-products__title -->
             </div><!-- /.artist-products__banner -->
 
             <ul class="artist-products-list">
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/na_item01.png" alt="nanaフォーク" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -266,7 +266,7 @@
                     </div><!-- /.artist-products-list__info -->
                 </li><!-- /.artist-products-list__item -->
 
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/na_item02.png" alt="リーフスプーン" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -277,7 +277,7 @@
                     </div><!-- /.artist-products-list__info -->
                 </li><!-- /.artist-products-list__item -->
 
-                <li class="artist-products-list__item">
+                <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
                         <img src="/products/img/na_item03.png" alt="カトラリーセット" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
@@ -291,7 +291,7 @@
 
         </section><!-- /.artist-products -->
 
-        <div class="recruit products-recruit_mt">
+        <div class="recruit products-recruit_mt anime anime_up">
             <p class="recruit__text">
                 食器作家さんの出品を随時募集しております。<br>
                 お電話またはお問い合わせフォームよりご連絡ください。
@@ -302,7 +302,7 @@
         <section class="sns">
             <h2 class="section-title section-title_cap">Follow us</h2><!-- /.section-title -->
 
-            <div class="sns-contents contents_mt">
+            <div class="sns-contents contents_mt anime anime_up">
 
                 <ul class="sns-list flex-wrapper_c">
                     <li class="sns-list__item"><a href="#" class="sns-list__link"><i class="fab fa-instagram"></i></a></li><!-- /.sns-list__item -->
