[Fix]最終チェック

--- a/about/index.html
+++ b/about/index.html
@@ -51,7 +51,7 @@
 
             <!-- sns -->
             <div class="under-header__sns contents_mt">
-                <h2 class="section-title section-title_cap">Follow us</h2><!-- /.section-title -->
+                <p class="section-title section-title_cap">Follow us</p><!-- /.section-title -->
 
                 <div class="sns-contents under-header__sns_mt">
                     <ul class="sns-list flex-wrapper_c">
