--- a/contact/index.html
+++ b/contact/index.html
@@ -51,7 +51,7 @@
 
             <!-- sns -->
             <div class="under-header__sns contents_mt">
-                <h2 class="section-title section-title_cap">Follow us</h2><!-- /.section-title -->
+                <p class="section-title section-title_cap">Follow us</p><!-- /.section-title -->
 
                 <div class="sns-contents under-header__sns_mt">
                     <ul class="sns-list flex-wrapper_c">
@@ -72,7 +72,7 @@
 
     <main class="main__inner">
 
-        <section class="contact-contents">
+        <div class="contact-contents">
 
             <a class="tel-link lh_25 anime anime_up" href="tel:090-123-4567">お電話でのお問い合わせはこちら</a><!-- /.tel-link -->
 
@@ -109,7 +109,7 @@
                 </details><!-- /.contact-message -->
             </div><!-- /.contact-message__wrapper -->
 
-        </section><!-- /.contact-contents -->
+        </div><!-- /.contact-contents -->
 
         <form method="post" class="contact-form anime anime_up">
             <dl>
@@ -138,7 +138,7 @@
                     </dt><!-- /.contact-form__label -->
 
                     <dd class="contact-form__input">
-                        <input type="text" id="name" autocomplete="name" enterkeyhint="next" required>
+                        <input type="text" id="name" autocomplete="name" required>
                     </dd><!-- /.contact-form__input -->
                 </div><!-- /.contact-form__item -->
 
@@ -149,7 +149,7 @@
                     </dt><!-- /.contact-form__label -->
 
                     <dd class="contact-form__input">
-                        <input type="email" id="email" autocomplete="email" enterkeyhint="next" required>
+                        <input type="email" id="email" autocomplete="email" required>
                     </dd><!-- /.contact-form__input -->
                 </div><!-- /.contact-form__item -->
 
@@ -160,7 +160,7 @@
                     </dt><!-- /.contact-form__label -->
 
                     <dd class="contact-form__input">
-                        <input type="tel" id="tel" autocomplete="tel" enterkeyhint="next">
+                        <input type="tel" id="tel" autocomplete="tel">
                     </dd><!-- /.contact-form__input -->
                 </div><!-- /.contact-form__item -->
 
@@ -171,7 +171,7 @@
                     </dt><!-- /.contact-form__label -->
 
                     <dd class="contact-form__input contact-form__input_textarea">
-                        <textarea id="text" enterkeyhint="send" required></textarea>
+                        <textarea id="text" required></textarea>
                     </dd><!-- /.contact-form__input -->
                 </div><!-- /.contact-form__item -->
 
