--- a/products/index.html
+++ b/products/index.html
@@ -51,7 +51,7 @@
 
             <!-- sns -->
             <div class="under-header__sns contents_mt">
-                <h2 class="section-title section-title_cap">Follow us</h2><!-- /.section-title -->
+                <p class="section-title section-title_cap">Follow us</p><!-- /.section-title -->
 
                 <div class="sns-contents under-header__sns_mt">
                     <ul class="sns-list flex-wrapper_c">
@@ -72,7 +72,7 @@
 
     <main class="main__inner">
 
-        <section class="products">
+        <div class="products">
 
             <p class="products__lead-text lh_25 anime anime_up">
                 こちらに掲載している作品は、お問い合わせフォームよりご購入いただけます。<br>
@@ -80,7 +80,7 @@
                 ※詳しい在庫状況等はお電話、またはお問い合わせフォームよりお問い合わせください。
             </p><!-- /.products__lead-text -->
 
-        </section><!-- /.products -->
+        </div><!-- /.products -->
 
         <!-- yamada takashi -->
         <section class="artist-products">
