--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
 <script src="https://kit.fontawesome.com/df603b5721.js" crossorigin="anonymous"></script>
 
 <!-- css -->
-<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="../css/style.css">
 
 </head>
 <body>
@@ -30,7 +30,9 @@
     <header class="under-header">
 
         <div class="under-header__inner flex-wrapper_c">
-            <a class="under-header__logo" href="/index.html">さらや</a><!-- /.under-header__logo -->
+            <a class="under-header__logo" href="../index.html">
+                <img src="../common/img/logo.png" alt="さらやのロゴ">
+            </a><!-- /.under-header__logo -->
 
             <button type="button" class="under-header__nav-btn" id="js_btn">
                 <span></span>
@@ -42,10 +44,10 @@
         <div class="under-header__open-contents" id="js_open-contents">
             <nav class="under-header__nav">
                 <ul class="under-header__nav-list flex-wrapper_sb">
-                    <li class="under-header__nav-item"><a href="/index.html" class="under-header__nav-link js_navBtn">Top</a></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/about/index.html" class="under-header__nav-link js_navBtn">About</a></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/products/index.html" class="under-header__nav-link js_navBtn">Products</a></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/contact/index.html" class="under-header__nav-link js_navBtn">Contact</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="../index.html" class="under-header__nav-link js_navBtn">Top</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="../about/index.html" class="under-header__nav-link js_navBtn">About</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="../products/index.html" class="under-header__nav-link js_navBtn">Products</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="../contact/index.html" class="under-header__nav-link js_navBtn">Contact</a></li><!-- /.under-header__nav-item -->
                 </ul><!-- /.under-header__nav-list -->
             </nav><!-- /.under-header__nav -->
 
@@ -90,11 +92,11 @@
 
             <div class="concept__img-wrapper">
                 <div class="concept__img concept__img_01 layer_white anime_list">
-                    <img src="/about/img/about01.jpg" alt="さらやの外観">
+                    <img src="../about/img/about01.jpg" alt="さらやの外観">
                 </div><!-- /.concept__img -->
 
                 <div class="concept__img concept__img_02 layer_white anime_list">
-                    <img src="/about/img/about02.jpg" alt="さらやの商品イメージ">
+                    <img src="../about/img/about02.jpg" alt="さらやの商品イメージ">
                 </div><!-- /.concept__img -->
             </div><!-- /.concept__img-wrapper -->
 
@@ -186,6 +188,6 @@
     </footer><!-- /.footer -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="/js/script.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
