--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="https://kit.fontawesome.com/df603b5721.js" crossorigin="anonymous"></script>
 
 <!-- css -->
-<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
@@ -32,7 +32,9 @@
         <div class="mv__inner">
 
             <div class="mv-contents">
-                <h1 class="mv-contents__title">さらや</h1>
+                <h1 class="mv-contents__title">
+                    <img src="common/img/logo.png" alt="さらやのロゴ">
+                </h1>
                 <p class="mv-contents__lead-text">A special piece for your daily dining table.</p>
             </div><!-- /.mv-contents -->
 
@@ -84,7 +86,7 @@
             <h2 class="section-title section-title_left">About</h2><!-- /.section-title -->
 
             <div class="about-contents contents_mt anime anime_up">
-                <a href="/about/index.html" class="about__link layer_white layer_round">
+                <a href="about/index.html" class="about__link layer_white layer_round">
                     <p class="about__lead-text">毎日の食卓に<br class="br_sp">そっと寄り添う、<br class="br_sp">あなただけの<br class="br_sp">うつわ。</p><!-- /.about__lead-text -->
                 </a><!-- /.about__link -->
             </div><!-- /.about-contents -->
@@ -99,7 +101,7 @@
                 <ul class="products-list flex-wrapper_sb flex-wrapper_sm-block">
                     <li class="products-list__item anime_list">
                         <figure class="products-banner products-banner_yt layer_white layer_br20">
-                            <img src="/common/img/yamadatakashi.jpg" alt="yamada takashi制作の白いお皿" width="534" height="196" loading="lazy" decoding="async">
+                            <img src="common/img/yamadatakashi.jpg" alt="yamada takashi制作の白いお皿" width="534" height="196" loading="lazy" decoding="async">
                         </figure><!-- /.products-banner -->
 
                         <div class="products-list__text-wrapper">
@@ -110,7 +112,7 @@
 
                     <li class="products-list__item anime_list">
                         <figure class="products-banner products-banner_n layer_white layer_br20">
-                            <img src="/common/img/ndish.jpg" alt="n.dish制作の赤いお皿" width="534" height="196" loading="lazy" decoding="async">
+                            <img src="common/img/ndish.jpg" alt="n.dish制作の赤いお皿" width="534" height="196" loading="lazy" decoding="async">
                         </figure><!-- /.products-banner -->
 
                         <div class="products-list__text-wrapper">
@@ -121,7 +123,7 @@
 
                     <li class="products-list__item anime_list">
                         <figure class="products-banner products-banner_s layer_white layer_br20">
-                            <img src="/common/img/saginuma.jpg" alt="鷺沼工房制作の湯呑" width="534" height="196" loading="lazy" decoding="async">
+                            <img src="common/img/saginuma.jpg" alt="鷺沼工房制作の湯呑" width="534" height="196" loading="lazy" decoding="async">
                         </figure><!-- /.products-banner -->
 
                         <div class="products-list__text-wrapper">
@@ -132,7 +134,7 @@
 
                     <li class="products-list__item anime_list">
                         <figure class="products-banner products-banner_na layer_white layer_br20">
-                            <img src="/common/img/nana.jpg" alt="nana制作のカトラリー" width="534" height="196" loading="lazy" decoding="async">
+                            <img src="common/img/nana.jpg" alt="nana制作のカトラリー" width="534" height="196" loading="lazy" decoding="async">
                         </figure><!-- /.products-banner -->
 
                         <div class="products-list__text-wrapper">
@@ -194,7 +196,7 @@
             <div class="events-contents contents_mt anime anime_up">
 
                 <div class="events-banner layer_white layer_br20">
-                    <img src="/top/img/top_events.jpg" alt="金継ぎ体験のバナー画像">
+                    <img src="top/img/top_events.jpg" alt="金継ぎ体験のバナー画像">
                     <h3 class="events-title">金継ぎ体験</h3><!-- /.events-title -->
                 </div><!-- /.events-banner -->
 
@@ -230,7 +232,7 @@
                             <th>
                                 <div class="teacher-profile">
                                     <div class="teacher-profile__img">
-                                        <img src="/top/img/events_prof.png" alt="金継ぎ体験の講師の顔写真" width="160" height="160" loading="lazy" decoding="async">
+                                        <img src="top/img/events_prof.png" alt="金継ぎ体験の講師の顔写真" width="160" height="160" loading="lazy" decoding="async">
                                     </div><!-- /.teacher-profile__img -->
 
                                     <p class="teacher-profile__name">yamada takashi</p><!-- /.teacher-profile__name -->
@@ -312,6 +314,6 @@
     </footer><!-- /.footer -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
