--- a/products/index.html
+++ b/products/index.html
@@ -17,7 +17,7 @@
 <script src="https://kit.fontawesome.com/df603b5721.js" crossorigin="anonymous"></script>
 
 <!-- css -->
-<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="../css/style.css">
 
 </head>
 <body>
@@ -30,7 +30,9 @@
     <header class="under-header">
 
         <div class="under-header__inner flex-wrapper_c">
-            <a class="under-header__logo" href="/index.html">さらや</a><!-- /.under-header__logo -->
+            <a class="under-header__logo" href="../index.html">
+                <img src="../common/img/logo.png" alt="さらやのロゴ">
+            </a><!-- /.under-header__logo -->
 
             <button type="button" class="under-header__nav-btn" id="js_btn">
                 <span></span>
@@ -42,10 +44,10 @@
         <div class="under-header__open-contents" id="js_open-contents">
             <nav class="under-header__nav">
                 <ul class="under-header__nav-list flex-wrapper_sb">
-                    <li class="under-header__nav-item"><a href="/index.html" class="under-header__nav-link js_navBtn">Top</a></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/about/index.html" class="under-header__nav-link js_navBtn">About</a></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/products/index.html" class="under-header__nav-link js_navBtn">Products</a></li><!-- /.under-header__nav-item -->
-                    <li class="under-header__nav-item"><a href="/contact/index.html" class="under-header__nav-link js_navBtn">Contact</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="../index.html" class="under-header__nav-link js_navBtn">Top</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="../about/index.html" class="under-header__nav-link js_navBtn">About</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="../products/index.html" class="under-header__nav-link js_navBtn">Products</a></li><!-- /.under-header__nav-item -->
+                    <li class="under-header__nav-item"><a href="../contact/index.html" class="under-header__nav-link js_navBtn">Contact</a></li><!-- /.under-header__nav-item -->
                 </ul><!-- /.under-header__nav-list -->
             </nav><!-- /.under-header__nav -->
 
@@ -93,7 +95,7 @@
             <ul class="artist-products-list">
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/y_item01.png" alt="しろいうつわ" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/y_item01.png" alt="しろいうつわ" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -104,7 +106,7 @@
 
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/y_item02.png" alt="しろいおさら" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/y_item02.png" alt="しろいおさら" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -115,7 +117,7 @@
 
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/y_item03.png" alt="きなりのおさら" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/y_item03.png" alt="きなりのおさら" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -126,7 +128,7 @@
 
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/y_item04.png" alt="ざらっとおさら" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/y_item04.png" alt="ざらっとおさら" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -137,7 +139,7 @@
 
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/y_item01.png" alt="しろいうつわ" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/y_item01.png" alt="しろいうつわ" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -148,7 +150,7 @@
 
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/y_item01.png" alt="しろいうつわ" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/y_item01.png" alt="しろいうつわ" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -170,7 +172,7 @@
             <ul class="artist-products-list">
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/n_item01.png" alt="blue dish" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/n_item01.png" alt="blue dish" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -181,7 +183,7 @@
 
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/n_item02.png" alt="almond dish" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/n_item02.png" alt="almond dish" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -192,7 +194,7 @@
 
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/n_item03.png" alt="pink dish" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/n_item03.png" alt="pink dish" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -203,7 +205,7 @@
 
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/n_item04.png" alt="black dish" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/n_item04.png" alt="black dish" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -225,7 +227,7 @@
             <ul class="artist-products-list">
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/s_item01.png" alt="湯呑セット" width="246" height="246" loading="lazy" decoding="async">
+                        <img src=../products/img/s_item01.png" alt="湯呑セット" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -236,7 +238,7 @@
 
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/s_item02.png" alt="菊" width="246" height="246" loading="lazy" decoding="async">
+                        <img src=../products/img/s_item02.png" alt="菊" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -257,7 +259,7 @@
             <ul class="artist-products-list">
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/na_item01.png" alt="nanaフォーク" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/na_item01.png" alt="nanaフォーク" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -268,7 +270,7 @@
 
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/na_item02.png" alt="リーフスプーン" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/na_item02.png" alt="リーフスプーン" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -279,7 +281,7 @@
 
                 <li class="artist-products-list__item anime_list">
                     <figure class="artist-products-list__img">
-                        <img src="/products/img/na_item03.png" alt="カトラリーセット" width="246" height="246" loading="lazy" decoding="async">
+                        <img src="../products/img/na_item03.png" alt="カトラリーセット" width="246" height="246" loading="lazy" decoding="async">
                     </figure><!-- /.artist-products-list__img -->
 
                     <div class="artist-products-list__info">
@@ -330,6 +332,6 @@
     </footer><!-- /.footer -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="/js/script.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
